@@ -1,3 +1,15 @@
+2004-12-21  David Harrison  <harrison@apple.com>
+
+        Reviewed by Ken Kocienda.
+
+        <rdar://problem/3924695> REGRESSION (Mail): double-clicking past end of line shows no selection, should select to EOL
+        
+        Problem was that RenderText::setSelectionState did not handle the SelectionStart case where start and end are the end of the line.
+        Fixed by pretending the start == end-1 in that situation, as long as end > 0.
+        
+        * khtml/rendering/render_text.cpp:
+        (RenderText::setSelectionState)
+
 2004-12-21  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by John.
